# bin2json

./: Cargo.toml  README.md  bin2json.toml
src/: main.rs
