[package]
name = "bin2json"
version = "0.1.0"
authors = ["Solal Jacob"]
edition = "2021"

description = "Extract metadata from different binary file format to json"
readme      = "README.md"

[dependencies]
tap = { version="0.1.0", git="https://github.com/tap-ir/tap.git" }

tap-plugin-local = { version="0.1.0", git="https://github.com/tap-ir/tap-plugin-local.git" }
tap-plugin-exif = { version="0.1.0", git="https://github.com/tap-ir/tap-plugin-exif.git" }
tap-plugin-hash = { version="0.1.0", git="https://github.com/tap-ir/tap-plugin-hash.git" }
tap-plugin-magic = { version="0.1.0", git="https://github.com/tap-ir/tap-plugin-magic.git" }
tap-plugin-prefetch = { version="0.1.0", git="https://github.com/tap-ir/tap-plugin-prefetch.git" }
tap-plugin-partition = { version="0.1.0", git="https://github.com/tap-ir/tap-plugin-partition.git" }
tap-plugin-lnk = { version="0.1.0", git="https://github.com/tap-ir/tap-plugin-lnk.git" }
tap-plugin-evtx = { version="0.1.0", git="https://github.com/tap-ir/tap-plugin-evtx.git" }
tap-plugin-registry = { version="0.1.0", git="https://github.com/tap-ir/tap-plugin-registry.git" }
tap-plugin-ntfs = { version="0.1.0", git="https://github.com/tap-ir/tap-plugin-ntfs.git" }
tap-plugin-mft = { version="0.1.0", git="https://github.com/tap-ir/tap-plugin-mft.git" }

#[target.'cfg(target_os = "linux")'.dependencies]
tap-plugin-device  = { version="0.1.0", git="https://github.com/tap-ir/tap-plugin-device.git", optional=true }

clap = "2.33.3"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
log = "0.4"
pretty_env_logger = "0.4.0"
toml = "0.5.6"

[features]
device = ["tap-plugin-device"]
